--- a/docs/.vuepress/templates/ssr.html
+++ b/docs/.vuepress/templates/ssr.html
@@ -24,7 +24,7 @@
 <!--<script src="https://cdn.bootcss.com/jquery/2.2.4/jquery.js"></script>-->
 <!--<script type="text/javascript">-->
 <!--  var message_Path = '/live2d/'-->
-<!--  var home_Path = 'https://baidu.com/'  //此处修改为你的域名，必须带斜杠-->
+<!--  var home_Path = 'https://relieved-hai.github.io/notebook/'  //此处修改为你的域名，必须带斜杠-->
 <!--</script>-->
 <!--<script type="text/javascript" src="/notebook/live2d/js/live2d.js"></script>-->
 <!--<script type="text/javascript" src="/notebook/live2d/js/message.js"></script>-->
