--- a/docs/.vuepress/templates/ssr.html
+++ b/docs/.vuepress/templates/ssr.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="icon" href="./favicon.ico" type="image/x-icon"/>
+  <link rel="stylesheet" href="/notebook/css/public.css" />
   <title>{{ title }}</title>
   <meta name="description" content="{{ description }}">
   {{{ userHeadTags }}}
